:bug: Fix problem with hover layers when hidden/blocked

--- a/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
@@ -230,6 +230,10 @@
     }
   }
 
+  .layer-row:hover .element-actions.selected & {
+    opacity: $op-10;
+  }
+
   .layer-row.highlight &,
   .layer-row:hover & {
     display: flex;
