:recycle: Replace buttons on workspace
:recycle: Replace buttons on workspace

:recycle: Format files

:bug: Fix pull request issues

--- a/frontend/src/app/main/ui/workspace/sidebar/options.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options.scss
@@ -40,6 +40,10 @@
   scrollbar-gutter: stable;
 }
 
+.design-options {
+  padding-inline-end: $s-12;
+}
+
 .inspect {
   scrollbar-gutter: unset;
 }
