:bug: Fix edit grid unit dropdown being clipped

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -150,7 +150,6 @@
 .grid-layout-menu {
   @include flexColumn;
   gap: $s-8;
-  overflow: hidden;
 
   .row {
     @include flexRow;
@@ -282,7 +281,7 @@
   }
 
   .track-title {
-    @include flexColumn;
+    display: grid;
     flex-grow: 1;
     padding: $s-8;
     gap: 0;
