:tada: Add test A/B for add a link to the libraries page

--- a/frontend/src/app/main/ui/workspace/libraries.scss
+++ b/frontend/src/app/main/ui/workspace/libraries.scss
@@ -323,3 +323,13 @@
   @include headlineSmallTypography;
   padding: $s-0 $s-16;
 }
+
+.templates-info {
+  color: var(--color-accent-primary);
+}
+
+.templates-info-link {
+  color: var(--color-accent-primary);
+  text-decoration: underline;
+  font-weight: $fw400;
+}
