--- a/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layer_item.scss
@@ -7,6 +7,7 @@
 @import "refactor/common-refactor.scss";
 
 .layer-row {
+  --layer-indentation-size: calc(#{$s-4} * 6);
   display: flex;
   flex-direction: row;
   align-items: center;
