--- a/frontend/src/app/main/ui/workspace/tokens/theme_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/theme_select.scss
@@ -7,12 +7,11 @@
 @import "refactor/common-refactor.scss";
 
 .custom-select {
-  --border-color: var(--menu-background-color);
-  --bg-color: var(--menu-background-color);
-  --icon-color: var(--icon-foreground);
-  --text-color: var(--menu-foreground-color);
+  --custom-select-border-color: var(--menu-background-color);
+  --custom-select-bg-color: var(--menu-background-color);
+  --custom-select-icon-color: var(--color-foreground-secondary);
+  --custom-select-text-color: var(--menu-foreground-color);
   @extend .new-scrollbar;
-  @include bodySmallTypography;
   position: relative;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -22,74 +21,60 @@
   margin: 0;
   padding: $s-8;
   border-radius: $br-8;
-  background-color: var(--bg-color);
-  border: $s-1 solid var(--border-color);
-  color: var(--text-color);
+  background-color: var(--custom-select-bg-color);
+  border: $s-1 solid var(--custom-select-border-color);
+  color: var(--custom-select-text-color);
   cursor: pointer;
-
-  ul {
-    margin-bottom: 0;
-  }
-
-  .group {
-    display: block;
-    @include headlineSmallTypography;
-    padding: $s-8;
-    color: var(--color-foreground-secondary);
-    font-weight: 600;
-  }
-
-  &.icon {
-    grid-template-columns: auto 1fr auto;
-  }
-
   &:hover {
-    --bg-color: var(--menu-background-color-hover);
-    --border-color: var(--menu-background-color);
-    --icon-color: var(--menu-foreground-color-hover);
+    --custom-select-bg-color: var(--menu-background-color-hover);
+    --custom-select-border-color: var(--menu-background-color);
+    --custom-select-icon-color: var(--menu-foreground-color-hover);
   }
 
   &:focus {
-    --bg-color: var(--menu-background-color-focus);
-    --border-color: var(--menu-background-focus);
+    --custom-select-bg-color: var(--menu-background-color-focus);
+    --custom-select-border-color: var(--menu-background-focus);
   }
 }
 
+.theme-options {
+  margin-bottom: 0;
+}
+
+.group {
+  display: block;
+  padding: $s-8;
+  color: var(--color-foreground-secondary);
+}
+
 .disabled {
-  --bg-color: var(--menu-background-color-disabled);
-  --border-color: var(--menu-border-color-disabled);
-  --icon-color: var(--menu-foreground-color-disabled);
-  --text-color: var(--menu-foreground-color-disabled);
+  --custom-select-bg-color: var(--menu-background-color-disabled);
+  --custom-select-border-color: var(--menu-border-color-disabled);
+  --custom-select-icon-color: var(--menu-foreground-color-disabled);
+  --custom-select-text-color: var(--menu-foreground-color-disabled);
   pointer-events: none;
   cursor: default;
 }
 
 .dropdown-button {
   @include flexCenter;
-  svg {
-    @extend .button-icon-small;
-    transform: rotate(90deg);
-    stroke: var(--icon-color);
-  }
+  color: var(--color-foreground-secondary);
 }
 
 .current-icon {
   @include flexCenter;
   width: $s-24;
   padding-right: $s-4;
-  svg {
-    @extend .button-icon-small;
-    stroke: var(--icon-foreground);
-  }
 }
 
 .custom-select-dropdown {
   @extend .dropdown-wrapper;
-  .separator {
-    margin: 0;
-    height: $s-12;
-    border-block-start: $s-1 solid var(--dropdown-separator-color);
-  }
+}
+
+.separator {
+  margin: 0;
+  height: $s-2;
+  border-block-start: $s-1 solid color-mix(in hsl, var(--color-foreground-secondary) 20%, transparent);
 }
 
 .custom-select-dropdown[data-direction="up"] {
@@ -109,57 +94,29 @@
   padding-right: 0;
 }
 
-li + .checked-element-button {
-  margin-top: $s-8;
-  &:before {
-    content: "";
-    position: absolute;
-    top: -$s-4;
-    left: 0;
-    right: 0;
-    height: 1px;
-    background-color: color-mix(in hsl, var(--color-foreground-secondary) 20%, transparent);
-  }
-}
-
 .checked-element {
   @extend .dropdown-element-base;
-
-  .icon {
-    @include flexCenter;
-    height: $s-24;
-    width: $s-24;
-    padding-right: $s-4;
-    svg {
-      @extend .button-icon;
-      stroke: var(--icon-foreground);
-    }
-  }
-
-  .label {
-    flex-grow: 1;
-    width: 100%;
-  }
-
-  .check-icon {
-    @include flexCenter;
-    svg {
-      @extend .button-icon-small;
-      visibility: hidden;
-      stroke: var(--icon-foreground);
-    }
-  }
-
   &.is-selected {
     color: var(--menu-foreground-color);
-    .check-icon svg {
-      stroke: var(--menu-foreground-color);
-      visibility: visible;
-    }
   }
   &.disabled {
     display: none;
   }
+}
+
+.check-icon {
+  @include flexCenter;
+  color: var(--icon-foreground-primary);
+  visibility: hidden;
+}
+
+.label {
+  flex-grow: 1;
+  width: 100%;
+}
+
+.check-icon-visible {
+  visibility: visible;
 }
 
 .current-label {
