:recycle: Review sets code and add DS components

--- a/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
@@ -83,6 +83,10 @@
   color: var(--color-foreground-primary);
 }
 
+.select-sets-message {
+  color: var(--color-foreground-secondary);
+}
+
 .create-theme-wrapper {
   display: flex;
   flex-direction: column;
