:paperclip: Show version on dbg header

--- a/backend/resources/app/templates/debug.tmpl
+++ b/backend/resources/app/templates/debug.tmpl
@@ -7,7 +7,7 @@ Debug Main Page
 {% block content %}
 <nav>
   <div class="title">
-    <h1>ADMIN DEBUG INTERFACE</h1>
+    <h1>ADMIN DEBUG INTERFACE (VERSION: {{version}})</h1>
   </div>
 </nav>
 <main class="dashboard">
